force-app/main/default/objects/Reservation__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <formula>Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailingCity</label>
    <type>Text</type>
</CustomField>