force-app/main/default/objects/Reservation__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <formula>Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailingState</label>
    <type>Text</type>
</CustomField>