force-app/main/default/objects/Reservation__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <formula>TEXT(Contact__r.Marital_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marital Status</label>
    <type>Text</type>
</CustomField>