force-app/main/default/objects/Reservation__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <formula>TEXT(Contact__r.Occupation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupation</label>
    <type>Text</type>
</CustomField>