force-app/main/default/objects/Reservation__c/fields/Party_Size__c.field-meta.xml
<CustomField>
    <fullName>Party_Size__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Party Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>