force-app/main/default/objects/Reservation__c/fields/Predicted_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Predicted_No_Show__c</fullName>
    <label>Predicted No Show</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>