force-app/main/default/objects/Reservation__c/fields/Previous_No_Shows__c.field-meta.xml
<CustomField>
    <fullName>Previous_No_Shows__c</fullName>
    <formula>Contact__r.Previous_No_Shows__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous No Shows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>