force-app/main/default/objects/Reservation__c/fields/Reservation_Time__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Time__c</fullName>
    <label>Reservation Time</label>
    <type>DateTime</type>
</CustomField>