force-app/main/default/objects/Reservation__c/fields/Rewards_Member__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Member__c</fullName>
    <formula>Contact__r.Rewards_Member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rewards Member</label>
    <type>Checkbox</type>
</CustomField>