force-app/main/default/objects/Reservation__c/fields/Total_Reservations__c.field-meta.xml
<CustomField>
    <fullName>Total_Reservations__c</fullName>
    <formula>Contact__r.Total_Reservations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Reservations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>