force-app/main/default/objects/Reservation__c/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <formula>Contact__r.Total_Spent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>