force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Reservation_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Party_Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>