force-app/main/default/objects/Reservation__c/listViews/Call_to_Confirm.listView-meta.xml
<ListView>
    <fullName>Call_to_Confirm</fullName>
    <columns>Contact__c</columns>
    <columns>Predicted_No_Show__c</columns>
    <columns>Status__c</columns>
    <columns>No_Show__c</columns>
    <columns>Previous_No_Shows__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Predicted_No_Show__c</field>
        <operation>greaterOrEqual</operation>
        <value>20</value>
    </filters>
    <label>Call to Confirm</label>
</ListView>