force-app/main/default/objects/Reservation__c/listViews/Upcoming_Reservations.listView-meta.xml
<ListView>
    <fullName>Upcoming_Reservations</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Reservation_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Upcoming</value>
    </filters>
    <label>Upcoming Reservations</label>
</ListView>